--- a/auth-lib/build.gradle
+++ b/auth-lib/build.gradle
@@ -26,8 +26,8 @@ project.archivesBaseName = 'auth'
 project.version = '2.0.2'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion '31.0.0'
+    compileSdkVersion 32
+    buildToolsVersion '32.0.0'
 
     buildFeatures {
         buildConfig = true
@@ -69,6 +69,9 @@ android {
 
 dependencies {
     implementation 'androidx.browser:browser:1.4.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.21.0'
