--- a/auth-sample/build.gradle
+++ b/auth-sample/build.gradle
@@ -22,8 +22,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    compileSdkVersion 32
+    buildToolsVersion "32.0.0"
 
     signingConfigs {
         debug {
@@ -68,7 +68,8 @@ android {
 
 dependencies {
 //    implementation files('../auth-lib/build/outputs/aar/auth-release.aar')
-    implementation 'com.spotify.android:auth:2.0.2'
+//    implementation 'com.spotify.android:auth:2.0.2'
+    implementation project(':auth-lib')
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
