--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,9 @@
 include ':auth-lib', ':auth-sample'
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
